fix: commit booking before spending bonus points to avoid FK violation, and catch unhandled promise rejections on money-critical API calls